# zanata-tests

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  GNUmakefile  ManageMessage.cmake  ManageString.cmake  ManageUrl.cmake  ManageVariable.cmake  RestTest.cmake  UseZanataProfile  flies.ini  pom.xml  pom.xml.in  test.cfg  utils.cmake  zanata.ini  zanata.ini.in  zanata.prjmant.ini
bugs/RHBZ1092193/: query.sh
bugs/RHBZ1172618/: query.sh  zanata-cli-test.sh
bugs/ZNTA-744/: query.sh
client-tests/: CMakeLists.txt  compendium.csv  maintainer_main_workflow.sh  mvn_maintainer_main_workflow.sh  zanata_backend
client-tests/common/: docker-runner.sh  functions.sh  get_doc_prj_var.sh  help-quick-test.sh  maintainer-main-workflow-test.sh  pull-test.sh  push-test.sh  put-project-test.sh  put-version-test.sh  smoke-test.sh
client-tests/docker/: Dockerfile.in  Makefile  docker-get-image-id.sh  docker-remove-image.sh
client-tests/java/: Build-Guide-Client-Java.sh  Installation-Guide-Client-Java.sh
client-tests/mvn/: CMakeLists.txt
client-tests/py/: CMakeLists.txt
client-tests/suites/: help-quick.sh  pull-quick.sh  pull.sh  push-quick.sh  push.sh  put-project-quick.sh  put-project.sh  put-version-quick.sh  put-version.sh
client-tests/zanata-client/: Build-Guide-zanata-client.sh  docker-install  (+1 more)
concordion/: TCMS.pm  TestCase.pm  tcms-import.pl  txt2html.sh  xhtml11.conf
doc-prjs/: Makefile  common.mk
docker/: Dockerfile.centos.in  Dockerfile.fedora.in  docker-get-image-id  docker-get-image-id.sh  docker-make-dockerfile  docker-remove-image  docker-remove-image.sh  docker-runner  docker-setup-environment  docker-setup-environment.sh
scripts/: CTest2JUnit.pl  CTest2JUnit.xsl  TCMS.pm  TestCase.pm  check_flies_up.sh  compare_translation.sh  compare_translation_dir.sh  find_file_in_paths.sh  find_valid_lang_dir.sh  find_valid_langs.sh  generate_flies_xml.sh  generate_pom_xml.pl  generate_privilege_test_suite.sh  generate_test_command.sh  generate_test_suite.sh  generate_trans_template.sh  generate_zanata_xml.sh  get_apikey.sh  get_project.pl  import.pl  is_server_up.sh  link_pom_xml.sh  pomXml_generate.pl  pomXml_insert_zanata.pl  prepare_project.sh  preprocess_publican.sh  real_path.sh  relative_path.sh  rest_mvn_run.sh  restore_file.sh  switch_version.pl  test-common-func.sh  testTestCase.pl  test_common_func.sh  upload_po.pl  zanata_pom_xml_make  zanata_xml_append  zanata_xml_append.pl  zanatac
selenium/src/: BasicMacros.cmake  CMakeLists.txt  ManageString.cmake  ManageVariable.cmake  README  find_file_in_paths.sh  generate_privilege_test_suite.sh  generate_test_suite.sh  get_apikey.sh  http404_check.perl  http404_check.sh  import.sh  steer.cmake  test.cfg  ui-map.js  user_set.sh
selenium/src/functions/: Home.html  SaveCurrentEntry.html  SaveOnEntry.html  SaveOnLocator.html  SignIn.html.in  SignInAdmin.html  SignInAdmin.html.in  SignInNormal.html  SignInNormal.html.in  SignOut.html  ui-map.js
selenium/src/initial_setup/: 00-InitSetup.html  CMakeLists.txt  JoinLanguages.html  JoinLanguages.html.in  ManageLanguages.html  ManageLanguages.html.in  ServerConfiguration.html.in  SignInAdmin.html  SignOut.html
selenium/src/perl/: import.pl  manage_variable.pl  upload_pot.pl
selenium/src/privilege-test-suites/: Issue0-NoAdminMenu.suite  Issue121.case  Issue121.suite  Issue61-NoLocalesManagerAccess.html  Issue61-NoLocalesManagerAccess.suite  Issue7-NoReindex.html  Issue7-NoReindex.suite  Issue85-HTTP404.case  Issue85-HTTP404.suite  Issue85-NoAddNewIterationURL.html  Issue85-NoAddNewIterationURL.suite  Issue85-NoNewCommunityURLAccess.case  Issue85-NoNewCommunityURLAccess.html  Issue85-NoSearch.html  Issue85-NoUserManagerAccess.html  URL_NotFound.list  normal.pattern  prelogin.pattern
selenium/src/resources/TranslationEditor/Editing/: TypeOn5thRowAndSave.html
selenium/src/resources/TranslationEditor/Issue112/: 0-Issue112.html  SaveOnEntry03.html  SaveOnEntry04.html  SaveOnEntry06.html
selenium/src/templates/: HomePage.html.in
selenium/src/test-suites/: GoFedoraReleaseNote.html  GoTranslation1st.html  GoTranslationJa.html  OpenTribeTest.html
selenium/src/test-suites/LanguageTeam/Issue13-AddRemove/: 0-Issue13-AddRemove.html  AddZhCnHans.html  ClickOnAddNewLanguage.html  GoLanguageManager.html  VerifyNotZhCnHans.html  VerifyZhCnHans.html
selenium/src/test-suites/LanguageTeam/Issue13-EnableDisable/: 0-Issue13-EnableDisable.html  DisableLang.html  DisableZhCnHans.html  EnableLang.html  VerifyLang.html  VerifyNotLang.html  VerifyNotZhCnHans.html  VerifyZhCnHans.html
selenium/src/test-suites/LanguageTeam/Issue9-JoinLeave/: 0-Issue9-JoinLeave.html  JoinDeTeam.html  JoinTeam.html  LeaveDeTeam.html  LeaveTeam.html  OpenLanguageTeam.html
selenium/src/test-suites/Project/: 0-CreateProject-version.html  CreateProject.html  CreateVersion.html
selenium/src/test-suites/TranslationEditor/Editing/: 0-TranslationEditor_Editing.html  Cleanup.html  FuzzyEntryCheck.html  GoFedoraReleaseNote.html  NextEntry.html  NextFuzzyX3.html  NextUntranslateFuzzy.html  NextUntranslatedEntry.html  PrevEntry.html  PrevFuzzyX2.html  PrevUntranslatedEntry.html  TypeFuzzy1.html  TypeFuzzy2On15.html  TypeFuzzy3OnPageEnd.html  TypeOn5thRowAndSave.html
selenium/src/test-suites/TranslationEditor/Issue112/: 0-Issue112.html  GoTranslationJa.html  LanuchAmateurRadio.html  SaveOnEntry02.html  SaveOnEntry03.html  SaveOnEntry04.html  SaveOnEntry05.html  SaveOnEntry06.html  SaveOnLocator.html  SetForEntry02.html  SetForEntry03.html  SetForEntry04.html  SetForEntry05.html  SetForEntry06.html  TranslationUnitSaveCheck.html
selenium/src/test-suites/TranslationEditor/Issue50/: 0-Issue50.html  CleanPage2EntryLast.html  CleanPage3Entry1.html  Cleanup.html  CloneOnPage3Entry1.html  GoSecurityGuide.html  GoSecurityGuideF13.html  GoTranslation1st.html  LanuchPam.html  MoveToPage2.html  SaveOnEntry.html  TypeOnPage2EntryLast.html
selenium/src/test-suites/Tribe/JoinLeave/: 0-Tribe_JoinLeave.html  LeaveDeTribeTest.html
users/: UserModeling.csv  csv_to_users.pl
xml_snippets/: plugin.xml.in  pom.plugin.xml.in
(+2305 files in other folders)
